--- a/src/styles/routes/HomeRoute.module.css
+++ b/src/styles/routes/HomeRoute.module.css
@@ -448,7 +448,7 @@
    border-radius: 5px;
    font-size: 20px;
    color: #fff;
-   font-family: var(--font-family);
+   font-family: 'font-light';
    position: relative;
    /* background-color: red; */
    /* background-image: linear-gradient(to right, #083b67, #073867); */
