--- a/src/styles/routes/JobSeekersRoute.module.css
+++ b/src/styles/routes/JobSeekersRoute.module.css
@@ -190,20 +190,20 @@
     -ms-flex-direction: column;
     justify-content: flex-start;
     align-items: center;
-    padding: 3rem 0px;
+    padding: 2rem 0px;
     border-radius: 10px;
  }
 
  .awardsContainer>h2{
-    font-size: 20px;
-    font-family: 'bold';
+    font-size: 40px;
+    font-family: 'font-bold';
  }
 
  .awardsContainer>p{
-    font-size: 20px;
-    font-family: 'bold';
+    font-size: 25px;
+    font-family: 'font-light';
     width: 100%;
-    padding: 0px 20px;
+    padding: 0px 20%;
     text-align: center;
     margin: 0;
  }
@@ -252,7 +252,7 @@
     height: fit-content;
     display: flex;
     padding-top: 20px;
-    font-family: var(--font-family);
+    font-family: 'font-bold';
     font-size: 20px;
     flex-direction: column;
  }
@@ -263,6 +263,6 @@
     padding: 7px 10px;
     border-radius: 5px;
     border: 0.5px solid #000;
-    font-family: var(--font-family);
+    font-family: 'font-light';
     cursor: pointer;
  }
