--- a/src/styles/routes/ViewJobApplicationDetailRoute.module.css
+++ b/src/styles/routes/ViewJobApplicationDetailRoute.module.css
@@ -161,22 +161,22 @@
 }
 
 .footer{
- display: flex;
- flex-direction: column;
- -ms-flex-direction: column;
- border-style: solid;
- border-color: #000;
- border-width: 1px 0px 0px 0px;
- row-gap: 20px;
- padding: 20px 50px;
+    display: flex;
+    flex-direction: column;
+    -ms-flex-direction: column;
+    border-style: solid;
+    border-color: #000;
+    border-width: 1px 0px 0px 0px;
+    row-gap: 20px;
+    padding: 20px 50px;
 }
 
 .footerDiv{
-  width: 100%;
-  justify-content: flex-start;
-  align-items: center;
-  display: flex;
-  column-gap: 10px;
+    width: 100%;
+    justify-content: flex-start;
+    align-items: center;
+    display: flex;
+    column-gap: 10px;
 }
 
 .footerDiv>h1{
@@ -190,6 +190,28 @@
     overflow-x: auto;
     display: flex;
     column-gap: 10px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    column-gap: 10px;
+    position: relative;
+}
+
+.copyIcon{
+    width: 20px;
+    height: 20px;
+    cursor: pointer;
+}
+
+.copySpan{
+    padding: 5px 10px;
+    background-color: var(--dim-bg);
+    font-family: 'light';
+    font-size: 15px;
+    border: 1px solid #111C33;
+    border-radius: 5px;
+    position: absolute;
+    content: '';
 }
 
 .list>p{
@@ -200,6 +222,11 @@
     border-radius: 10px;
     padding: 5px 7px;
     margin: 0;
+}
+
+.list::-webkit-scrollbar{
+    width: 0;
+    height: 0;
 }
 
 .emailTxt{
@@ -218,7 +245,7 @@
         width: fit-content;
         padding-left: 5px;
     }
-    
+
     .jobTitleColoredDivLeft{
         padding-left: 5px;
     }
