Fixed all links, made changes to the home page, added the ability to load one job on each category on the homaepage. Fixed the bug that navigates to browsejobs when post job is clicked

--- a/src/styles/components/CalendarEvent2.module.css
+++ b/src/styles/components/CalendarEvent2.module.css
@@ -44,8 +44,8 @@
 
 .calendarParent{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     height: 100%;
     box-sizing: border-box;
@@ -56,8 +56,8 @@
 
 .calendarParent>span{
     display: flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: flex-start;
+    align-items: flex-start;
     width: 100%;
     height: fit-content;
     box-sizing: border-box;
