--- a/src/styles/components/BrowseJobs.module.css
+++ b/src/styles/components/BrowseJobs.module.css
@@ -64,10 +64,9 @@
     border: none;
     background-color: var(--dim-bg);
     border-radius: 10px;
-    padding-right: 50px;
     font-family: 'light';
     font-size: 20px;
-    padding-right: 50px;
+    /* padding-right: 50px; */
     padding-left: 10px;
 }
 
