--- a/src/styles/components/SustanabilityWeekEvent.module.css
+++ b/src/styles/components/SustanabilityWeekEvent.module.css
@@ -45,7 +45,8 @@
   flex-direction: column;
   -ms-flex-direction: column;
   padding: 10px;
-  border: 1px solid #fff;
+  border: 1px solid rgb(12, 74, 207);
+  border-radius: 10px;
 }
 
 .header{
