--- a/src/styles/popups/ApplyForJobPopup.module.css
+++ b/src/styles/popups/ApplyForJobPopup.module.css
@@ -1,12 +1,12 @@
 .parent{
-    position: fixed;
+    /* position: fixed;
     top: 0;
     left: 0;
     right: 0;
-    bottom: 0;
+    bottom: 0; */
     background-color: rgba(0, 0, 0, .05);
     display: flex;
-    z-index: 1000;
+    /* z-index: 1000; */
     justify-content: center;
     align-items: center;
     backdrop-filter: blur(5px);
